# kazino

./: .gitignore  pyproject.toml
.github/workflows/: продолжительная_интеграция.yml
инструменты/: пуцинфо.py
казино/: интер.py  исключения.py  казино.py  константы.py  парсер.py  программа.py  структуры.py  типы.py  токен.py  утилиты.py
казино/операции/: база.py  питон.py
примеры/: арифметика.кз  ветвление.кз  привет.кз  привет_мир.кз  тест.кз  тест_ошибок.кз
тесты/: дым_тест.py  интер_тест.py  комп_тест.py  помощники.py
