[tool.poetry]
name = "казино"
version = "0.1.0"
description = "Язык для настоящих диффичент"
authors = ["Roman Kosarev <rmksrv@outlook.com>"]
license = "MIT"
readme = "ПРОЧТИМЕНЯ.md"

[tool.poetry.scripts]
"казино" = "казино.казино:главная"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.3.5"

[tool.pytest.ini_options]
testpaths = "тесты"
python_files = "*_тест.py"
python_functions = "тест_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
